fixed testimonials layout problems

--- a/style.css
+++ b/style.css
@@ -772,16 +772,18 @@ font-size: 14px;
   padding: 0;
   list-style: none;
   display: flex;
-  transition: all ease-in .3s;
+  transition: all ease-in .5s;
 }
 
 .cards-container {
   display: flex;
+  box-sizing: border-box;
   justify-content: space-between;
-  flex-wrap: nowrap;
-  margin-top: 60px;
+  flex-wrap: wrap;
+  padding: 60px 5px 20px 5px;
   width: 70vw;
   opacity: 0;
+  transition: all ease-out .5s;
 }
 .testimonials-item.current-slide .cards-container {
   opacity: 1;
@@ -792,13 +794,16 @@ font-size: 14px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   margin-top: 10px;
   width: 45%;
-  min-width: 300px;
+  min-width: 330px;
   height: 130px;
   box-shadow: 0px 2px 5px 1px #aeadab;
   background-color: #fff;
+}
+
+.card:nth-child(1) {
+  margin-right: 5px;
 }
 
 
@@ -830,10 +835,11 @@ font-size: 14px;
 .carousel-controls__item {
   width: 10px;
   height: 10px;
+  padding: 0;
   margin-left: 10px;
   border: none;
   border-radius: 50%;
-  background-color: #f5f5f5;
+  background-color: #ebe8e8;
   cursor: pointer;
   transition: all ease-out .5s;
 }
